# moorcheh-python-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: msmarco_benchmark_accuracy_test.py  response_time_becnhmark.py
examples/: 01_create_namespace.py  02_list_namespaces.py  03_upload_documents.py  04_search_text.py  05_delete_document.py  06_get_gen_ai_answer.py  07_upload_file.py  08_delete_file.py  quickstart.py
moorcheh_sdk/: __init__.py  _base_client.py  _client.py  _legacy_client.py  client.py  exceptions.py  pagination.py
moorcheh_sdk/resources/: answer.py  base.py  documents.py  namespaces.py  search.py  vectors.py
moorcheh_sdk/types/: __init__.py  answer.py  document.py
moorcheh_sdk/utils/: decorators.py
tests/: __init__.py  conftest.py  test_async_client.py  test_client.py  test_deprecation.py  test_exceptions.py
tests/resources/: test_answer.py  test_batching.py  test_documents.py  test_namespaces.py  test_search.py
