[tool.poetry]
name = "moorcheh-sdk"
version = "0.1.0"
description = "Python SDK for the Moorcheh Semantic Search API"
authors = ["Your Name <you@example.com>"] # Replace with your details
readme = "README.md"
license = "MIT" # Or your chosen license
repository = "https://github.com/your-username/moorcheh-python-sdk" # Replace with your repo URL
homepage = "https://your-project-homepage.com" # Optional project homepage
keywords = ["moorcheh", "semantic search", "vector search", "ai", "sdk"]

[tool.poetry.dependencies]
# --- UPDATED PYTHON VERSION ---
python = "^3.9" # Minimum supported Python version is now 3.9
# -----------------------------
httpx = "^0.27.0" # HTTP client (supports sync/async)
# Add other core dependencies here if needed later

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"         # Testing framework
pytest-httpx = "^0.30.0"  # Mocking HTTP requests for tests (Now compatible)
mypy = "^1.10.0"          # Static type checker
# Add other dev dependencies like linters (ruff, black), coverage tools later

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Optional: Configure MyPy
[tool.mypy]
# --- UPDATED MyPy PYTHON VERSION ---
python_version = "3.9"
# ---------------------------------
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Can be helpful initially

# Optional: Configure pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
