[tool.poetry]
name = "moorcheh-sdk"
version = "0.1.0"
description = "Python SDK for the Moorcheh Semantic Search API"
authors = ["Majid Fekri majid.fekri@edgeaiinnovations.com"]
readme = "README.md"
license = "MIT" # Or your chosen license
repository = "https://github.com/mjfekri/moorcheh-python-sdk" 
homepage = "https://www.moorcheh.ai" 
keywords = ["moorcheh", "semantic search", "vector search", "ai", "sdk"]

[tool.poetry.dependencies]
# --- UPDATE THIS LINE ---
python = "^3.10" # Require Python 3.10 or newer
# ------------------------
httpx = "^0.27.0" # HTTP client (supports sync/async)
# Add other core dependencies here if needed later

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"         # Testing framework
pytest-httpx = "^0.30.0"  # Mocking HTTP requests for tests
mypy = "^1.10.0"          # Static type checker
# numpy will be added here by the next command
# Add other dev dependencies like linters (ruff, black), coverage tools later
numpy = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Optional: Configure MyPy
[tool.mypy]
# --- UPDATE THIS LINE ---
python_version = "3.10" #  project's minimum Python version
# ------------------------
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Can be helpful initially

# Optional: Configure pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
